@@ -86,6 +86,8 @@ new:
   thanks to Ville Skyttä for providing a patch.
 - externally triggered search timer updates (via service interface or SVDRP) will now 
   automatically activate the setting "Use search timers" in the setup.
+- epgsearch now also checks the recordings length among the correct start and stop time of a timer
+  when testing for complete recordings. 98% and more are handled as complete. 
 
 fixes:
 - fixed a crash when pressing 'Ok' in an empty timers done menu
